# guvercin-desktop

./: .gitignore  BACKEND_SPEC.md  LICENSE  README.md  babel.cfg  messages.pot  package-lock.json  package.json
frontend/: eslint.config.js  i18next-scanner.config.cjs  index.html  package-lock.json  package.json
frontend/src/: App.jsx  i18n.js  index.css  main.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src/components/: Avatar.jsx  CalendarWorkspace.jsx  ComposeEditor.css  ComposeEditor.jsx  ComposeMailContent.jsx  ComposeView.css  ComposeView.jsx  ContactsWorkspace.jsx  ExternalLinkPrompt.css  ExternalLinkPrompt.jsx  MailWorkspace.jsx  SidebarTabs.css  SidebarTabs.jsx  TodoWorkspace.jsx
frontend/src/context/: OfflineSyncContext.jsx  ThemeContext.jsx
frontend/src/pages/: AccountSelectionPage.css  AccountSelectionPage.jsx  AccountSettingsPage.css  AccountSettingsPage.jsx  AiChooserPage.css  AiChooserPage.jsx  DashboardPage.css  DashboardPage.jsx  DetachedComposeWindow.jsx  DetachedMailWindow.jsx  FontPage.css  FontPage.jsx  LanguagePage.css  LanguagePage.jsx  LockScreen.css  LockScreen.jsx  LoginPage.css  LoginPage.jsx  NotAuthPage.css  NotAuthPage.jsx  OfflineSetupPage.css  OfflineSetupPage.jsx  SettingsPage.css  SettingsPage.jsx  ThemeImportPage.css  ThemeImportPage.jsx  ThemePage.css  ThemePage.jsx
frontend/src/theme/: importThemeFile.js  themeManager.js
frontend/src/utils/: accountStorage.js  api.js  avatar.js  compose.js  compose.test.js  (+7 more)
icons/: draft.ai  filter.ai  forward.ai  inbox.ai  label.ai  more-choice.ai  notification.ai  open-in-new-tab.ai  reload.ai  spambox.ai
img/icons/: all-mails.ai  archive.ai  arrow-no-tail.ai  attachment.ai  columns-1.ai  columns-3.ai  columns-4.ai  dock-shown.ai  folder.ai  forward-all.ai  move-to-folder.ai  new-mail.ai  online-but-problem.ai  online.ai  plus.ai  print.ai  read.ai  recycle-bin.ai  reply-all.ai  reply.ai  save.ai  sentbox.ai  settings.ai  sort.ai  trash-bin.ai  unreaed.ai
img/logo/: guvercin-bottomtext-nobackground.ai  guvercin-notext-nbackground.ai  guvercin-righttext-background.ai  guvercin-righttext-nobackground.ai
logo/: guvercin-bottomtext-background.ai
rust-backend/: Cargo.toml
rust-backend/src/: avatar.rs  avatar_routes.rs  crypto.rs  db.rs  error.rs  i18n.rs  imap_client.rs  imap_session.rs  lib.rs  mail_models.rs  mail_routes.rs  main.rs  models.rs  offline_routes.rs  routes.rs  security_routes.rs  smtp_send.rs
rust-backend/src/keystore/: mod.rs
src-tauri/src/: main.rs
(+25 files in other folders)
