[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
thiserror = "1.0"
dotenvy = "0.15"
native-tls = "0.2"
anyhow = "1.0"
imap = "2.4"
mailparse = "0.15"
dirs = "6.0"
chrono = "0.4"
# Avatar resolution deps
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
md5 = "0.7"
sha2 = "0.10"
scraper = "0.20"
hex = "0.4"
