[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros"] }
thiserror = "1.0"
dotenvy = "0.15"
native-tls = "0.2"
anyhow = "1.0"
imap = "2.4"
mailparse = "0.15"
dirs = "6.0"
chrono = "0.4"
base64 = "0.22"
chacha20poly1305 = "0.10"
hkdf = "0.12"
libsqlite3-sys = { version = "0.27", features = ["bundled-sqlcipher"] }
rand = "0.8"
zeroize = "1.7"
lettre = { version = "0.11.19", features = ["tokio1-rustls-tls", "smtp-transport", "builder"], default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
security-framework-sys = "2.11"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
] }

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "3", features = ["rt-tokio-crypto-rust"] }
zbus = { version = "3", default-features = false, features = ["tokio"] }
# Avatar resolution deps
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
md5 = "0.7"
sha2 = "0.10"
scraper = "0.20"
hex = "0.4"
